--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/Ouroboros-blue-100.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Ouroboros-blue-100.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Devil May Cry</title>
     <link href="/dist/output.css" rel="stylesheet" />
